prevent annoying content shift due to scroll bar

--- a/static/preflight.css
+++ b/static/preflight.css
@@ -26,6 +26,7 @@ html {
   tab-size: 4; /* 3 */
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* 1 */
   font-feature-settings: normal; /* 5 */
+  overflow-y: scroll;
 }
 
 /*
